Script and maven changes to build the bundle for publishing in one go